--- a/src/App.css
+++ b/src/App.css
@@ -181,11 +181,23 @@
 .send-button {
   background: #4f46e5;
   color: white;
+  margin-bottom: 20px;
 }
 
 .send-button:hover:not(:disabled) {
   background: #4338ca;
 }
+
+.vip-button {
+  background: #4f46e5;
+  color: white;
+  margin-top: 20px;
+}
+
+.vip-button:hover:not(:disabled) {
+  background: #4338ca;
+}
+
 
 .button:disabled {
   opacity: 0.7;
@@ -214,6 +226,62 @@
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
+/* Vip page */
+
+.vip-page__button {
+  background: #4f46e5;
+  color: white;
+  margin-top: 20px;
+}
+
+.vip-page__button:hover:not(:disabled) {
+  background: #4338ca;
+}
+
+.centerBlock{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
+
+.admin-button{
+  max-width:30% ;
+  background: #4f46e5;
+  color: white;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.admin-button:hover:not(:disabled) {
+  background: #4338ca;
+}
+
+/* promokod */
+
+.promocodeButton{
+  max-width:30% ;
+  background: #4f46e5;
+  color: white;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.promocodeButton:hover:not(:disabled) {
+  background: #4338ca;
+}
+
+.promocod{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  gap: 20px;
+}
+
 
 @keyframes spin {
   to {
